started merging clock generation

--- a/active_hdl/atlys_sdr/soc/compile.cfg
+++ b/active_hdl/atlys_sdr/soc/compile.cfg
@@ -1,7 +1,7 @@
 [View]
-Entity=
+Entity=soc_top_tb
 Architecture=
-TopLevelType=
+TopLevelType=3
 [file:.\src\soc_top.v]
 Enabled=1
 [file:.\src\soc_top_tb.v]
