added simple test firmware for simulation added outputbuffer for spi clock

--- a/active_hdl/atlys_sdr/soc/compile.cfg
+++ b/active_hdl/atlys_sdr/soc/compile.cfg
@@ -292,3 +292,5 @@ Enabled=1
 Enabled=1
 [file:.\..\..\..\hdl\xilinx_ddr2_wrapper\xilinx_ddr2_if.v]
 Enabled=1
+[file:.\..\..\..\hdl\sim\bidir_delay.vhd]
+Enabled=1
