--- a/hdl/wb_intercon/wb_intercon.conf
+++ b/hdl/wb_intercon/wb_intercon.conf
@@ -1,28 +1,35 @@
 ; or1k instruction bus master
 [master or1k_i]
-slaves = ddr2_ibus flash0
+slaves = ddr2_ibus
 
 ; or1k data bus master
 [master or1k_d]
-slaves = ddr2_dbus flash0 uart0 gpio0 spi0
+slaves = ddr2_dbus uart0 gpio0 spi0
 
 ; debug master
 [master dbg]
-slaves = ddr2_dbus flash0
+slaves = ddr2_debug
 
-[slave flash0]
-offset=0
-size=0x800000
+[master flash0]
+slaves = ddr2_loader
 
 ; DDR2 SDRAM (128MB)
 ; Have several ports with buffering features,
 ; so we split each port into a seperate slave
 [slave ddr2_dbus]
-offset=0x20000000
+offset=0x00000000
 size=0x8000000
 
 [slave ddr2_ibus]
-offset=0x20000000
+offset=0x00000000
+size=0x8000000
+
+[slave ddr2_loader]
+offset=0x00000000
+size=0x8000000
+
+[slave ddr2_debug]
+offset=0x00000000
 size=0x8000000
 
 [slave uart0]
