added delay synchronization statemachine for vhdci_mux interface added simulation flag for flash memory loader added file for initialized ddr memory

--- a/active_hdl/atlys_sdr/soc/compile.cfg
+++ b/active_hdl/atlys_sdr/soc/compile.cfg
@@ -302,3 +302,15 @@ Enabled=1
 Enabled=1
 [file:.\..\..\..\hdl\wb_flash_loader.vhd]
 Enabled=1
+[file:.\..\..\..\..\AtlysAFE\hdl\main.vhd]
+Enabled=1
+[file:.\src\pll_main.vhd]
+Enabled=1
+[file:.\..\..\..\..\AtlysAFE\coregen\pll_main.vhd]
+Enabled=1
+[file:.\..\..\..\..\AtlysAFE\coregen\pll_mux.vhd]
+Enabled=1
+[file:.\..\..\..\..\AtlysAFE\coregen\rx_mux.vhd]
+Enabled=1
+[file:.\..\..\..\..\AtlysAFE\coregen\tx_mux.vhd]
+Enabled=1
