--- a/atlys_sdr.ucf
+++ b/atlys_sdr.ucf
@@ -47,16 +47,16 @@ NET "leds[5]"  LOC = "D4" |IOSTANDARD=LVCMOS25;
 NET "leds[6]"  LOC = "P16" |IOSTANDARD=LVCMOS25;
 NET "leds[7]"  LOC = "N12" |IOSTANDARD=LVCMOS25;
 
- NET "adc_chb_p<1>"  LOC = "U16"; # Bank = 2,  Pin name = IO_L2P_CMPCLK,        	Sch name = EXP-IO1_P
- NET "adc_chb_p<0>"  LOC = "U15"; # Bank = 2,  Pin name = *IO_L5P,        		Sch name = EXP-IO2_P
- NET "adc_frame_sync_p"  LOC = "U13"; # Bank = 2,  Pin name = IO_L14P_D11,        	Sch name = EXP-IO3_P
+ NET "adc_chb_p<1>"  LOC = "U16" |DIFF_TERM = "TRUE"; # Bank = 2,  Pin name = IO_L2P_CMPCLK,        	Sch name = EXP-IO1_P
+ NET "adc_chb_p<0>"  LOC = "U15" |DIFF_TERM = "TRUE"; # Bank = 2,  Pin name = *IO_L5P,        		Sch name = EXP-IO2_P
+ NET "adc_frame_sync_p"  LOC = "U13" |DIFF_TERM = "TRUE"; # Bank = 2,  Pin name = IO_L14P_D11,        	Sch name = EXP-IO3_P
  NET "VHDCI_MUX_IN_P"  LOC = "M11"; # Bank = 2,  Pin name = *IO_L15P,        		Sch name = EXP-IO4_P
- NET "adc_cha_p<1>"  LOC = "R11"; # Bank = 2,  Pin name = IO_L16P,        		Sch name = EXP-IO5_P
- NET "adc_cha_p<0>"  LOC = "T12"; # Bank = 2,  Pin name = *IO_L19P,        		Sch name = EXP-IO6_P
+ NET "adc_cha_p<1>"  LOC = "R11" |DIFF_TERM = "TRUE"; # Bank = 2,  Pin name = IO_L16P,        		Sch name = EXP-IO5_P
+ NET "adc_cha_p<0>"  LOC = "T12" |DIFF_TERM = "TRUE"; # Bank = 2,  Pin name = *IO_L19P,        		Sch name = EXP-IO6_P
  NET "VHDCI_MUX_CLK_P"  LOC = "N10"; # Bank = 2,  Pin name = *IO_L20P,        		Sch name = EXP-IO7_P
 # NET "VHDCIIO1<7>"  LOC = "M10"; # Bank = 2,  Pin name = *IO_L22P,        		Sch name = EXP-IO8_P
  NET "VHDCI_MUX_OUT_P"  LOC = "U11"; # Bank = 2,  Pin name = IO_L23P,        		Sch name = EXP-IO9_P
- NET "adc_bit_clk_p"  LOC = "R10"; # Bank = 2,  Pin name = IO_L29P_GCLK3,        	Sch name = EXP-IO10_P
+ NET "adc_bit_clk_p"  LOC = "R10" |DIFF_TERM = "TRUE"; # Bank = 2,  Pin name = IO_L29P_GCLK3,        	Sch name = EXP-IO10_P
 # NET "" LOC = "U10"; # Bank = 2,  Pin name = IO_L30P_GCLK1_D13,      Sch name = EXP-IO11_P
 # NET "VHDCIIO1<11>" LOC = "R8";  # Bank = 2,  Pin name = IO_L31P_GCLK31_D14,     Sch name = EXP-IO12_P
 # NET "VHDCIIO1<12>" LOC = "M8";  # Bank = 2,  Pin name = *IO_L40P,        		Sch name = EXP-IO13_P
@@ -68,16 +68,16 @@ NET "leds[7]"  LOC = "N12" |IOSTANDARD=LVCMOS25;
 # NET "VHDCIIO1<18>" LOC = "N6";  # Bank = 2,  Pin name = *IO_L47P,        		Sch name = EXP-IO19_P
 # NET "VHDCIIO1<19>" LOC = "U5";  # Bank = 2,  Pin name = IO_49P_D3,        		Sch name = EXP-IO20_P
 
- NET "adc_chb_n<1>"  LOC = "V16"; # Bank = 2,  Pin name = IO_L2N_CMPMOSI,        	Sch name = EXP-IO1_N
- NET "adc_chb_n<0>"  LOC = "V15"; # Bank = 2,  Pin name = *IO_L5N,        		Sch name = EXP-IO2_N
- NET "adc_frame_sync_n"  LOC = "V13"; # Bank = 2,  Pin name = IO_L14N_D12,        	Sch name = EXP-IO3_N
+ NET "adc_chb_n<1>"  LOC = "V16" |DIFF_TERM = "TRUE"; # Bank = 2,  Pin name = IO_L2N_CMPMOSI,        	Sch name = EXP-IO1_N
+ NET "adc_chb_n<0>"  LOC = "V15" |DIFF_TERM = "TRUE"; # Bank = 2,  Pin name = *IO_L5N,        		Sch name = EXP-IO2_N
+ NET "adc_frame_sync_n"  LOC = "V13" |DIFF_TERM = "TRUE"; # Bank = 2,  Pin name = IO_L14N_D12,        	Sch name = EXP-IO3_N
  NET "VHDCI_MUX_IN_N"  LOC = "N11"; # Bank = 2,  Pin name = *IO_L15N,        		Sch name = EXP-IO4_N
- NET "adc_cha_n<1>"  LOC = "T11"; # Bank = 2,  Pin name = IO_L16N_VREF,        	Sch name = EXP-IO5_N
- NET "adc_cha_n<0>"  LOC = "V12"; # Bank = 2,  Pin name = *IO_L19N,        		Sch name = EXP-IO6_N
+ NET "adc_cha_n<1>"  LOC = "T11" |DIFF_TERM = "TRUE"; # Bank = 2,  Pin name = IO_L16N_VREF,        	Sch name = EXP-IO5_N
+ NET "adc_cha_n<0>"  LOC = "V12" |DIFF_TERM = "TRUE"; # Bank = 2,  Pin name = *IO_L19N,        		Sch name = EXP-IO6_N
  NET "VHDCI_MUX_CLK_N"  LOC = "P11"; # Bank = 2,  Pin name = *IO_L20N,        		Sch name = EXP-IO7_N
 # NET "VHDCIIO2<7>"  LOC = "N9";  # Bank = 2,  Pin name = *IO_L22N,        		Sch name = EXP-IO8_N
  NET "VHDCI_MUX_OUT_N"  LOC = "V11"; # Bank = 2,  Pin name = IO_L23N,        		Sch name = EXP-IO9_N
- NET "adc_bit_clk_n"  LOC = "T10"; # Bank = 2,  Pin name = IO_L29N_GCLK2,          Sch name = EXP-IO10_N
+ NET "adc_bit_clk_n"  LOC = "T10" |DIFF_TERM = "TRUE"; # Bank = 2,  Pin name = IO_L29N_GCLK2,          Sch name = EXP-IO10_N
 # NET "VHDCIIO2<10>" LOC = "V10"; # Bank = 2,  Pin name = IO_L30N_GCLK0_USERCCLK, Sch name = EXP-IO11_N
 # NET "VHDCIIO2<11>" LOC = "T8";  # Bank = 2,  Pin name = IO_L31N_GCLK30_D15,     Sch name = EXP-IO12_N
 # NET "VHDCIIO2<12>" LOC = "N8";  # Bank = 2,  Pin name = *IO_L40N,        		Sch name = EXP-IO13_N
@@ -88,24 +88,24 @@ NET "leds[7]"  LOC = "N12" |IOSTANDARD=LVCMOS25;
 # NET "VHDCIIO2<17>" LOC = "T7";  # Bank = 2,  Pin name = IO_L46N,        		Sch name = EXP-IO18_N
 # NET "VHDCIIO2<18>" LOC = "P7";  # Bank = 2,  Pin name = *IO_L47N,        		Sch name = EXP-IO19_N
 # NET "VHDCIIO2<19>" LOC = "V5";  # Bank = 2,  Pin name = IO_49N_D4,        		Sch name = EXP-IO20_N 
- 
-#
-#NET "ltc_cs"  LOC = "U15" |IOSTANDARD = LVCMOS25 ; # 34
-#NET "ltc_sck"  LOC = "U13" |IOSTANDARD = LVCMOS25 ; # 26
-#NET "ltc_sdi"  LOC = "M11" |IOSTANDARD = LVCMOS25 ; # 23
-#NET "ltc_sdo"  LOC = "U5" | IOSTANDARD = LVCMOS25 ; # 33
+
+#NET "tck_pad_i"  LOC = "U15" ; # 34
+#NET "tdi_pad_i"  LOC = "U13" ; # 26
+#NET "tdo_pad_o"  LOC = "M11" ; # 23
+#NET "tms_pad_i"  LOC = "U5" ; # 33
+
 NET "rs232_rx"  LOC = "A16";
 NET "rs232_tx"  LOC = "B16";
 
 # Atlys PMOD connector
-#NET "pmod<0>" LOC = "T3";
-#NET "pmod<1>" LOC = "R3";
-#NET "pmod<2>" LOC = "P6";
-#NET "pmod<3>" LOC = "N5";
-#NET "pmod<4>" LOC = "V9";
-#NET "pmod<5>" LOC = "T9"; 
-#NET "pmod<6>" LOC = "V4";
-#NET "pmod<7>" LOC = "T4";
+NET "pmod<0>" LOC = "T3"; #JA-D0_N  / JA1
+NET "pmod<1>" LOC = "R3"; #JA-D0_P  / JA2
+NET "pmod<2>" LOC = "P6"; #JA-D2_N  / JA3
+NET "pmod<3>" LOC = "N5"; #JA-D2_P  / JA4
+NET "pmod<4>" LOC = "V9"; #JA-CLK_N / JA7
+NET "pmod<5>" LOC = "T9"; #JA-CLK_P / JA8
+NET "pmod<6>" LOC = "V4"; #JA-D1_N  / JA9
+NET "pmod<7>" LOC = "T4"; #JA-D1_P  / JA10
 # Buttons
 NET "btn<0>" LOC = "T15"; # Reset
 NET "btn<1>" LOC = "N4"|IOSTANDARD = LVCMOS18; # BTNU
@@ -296,13 +296,9 @@ NET "flash_spi_io[3]" LOC = V14;
 NET "flash_spi_io[0]" LOC = T13;
 NET "flash_spi_io[1]" LOC = R13;
 NET "flash_spi_io[2]" LOC = T14;
-NET "tck_pad_i" LOC = T9;
-NET "tdi_pad_i" LOC = V9;
-NET "tdo_pad_o" LOC = R3;
-NET "tms_pad_i" LOC = T3;
 
-NET "tck_pad_i" TNM_NET = "tck_pad_i";
-TIMESPEC TS_tck_pad_i = PERIOD "tck_pad_i" 5 MHz HIGH 50 %;
+#NET "tck_pad_i" TNM_NET = "tck_pad_i";
+#TIMESPEC TS_tck_pad_i = PERIOD "tck_pad_i" 5 MHz HIGH 50 %;
 
 NET "adc_bit_clk_p" TNM_NET = "adc_bit_clk_p";
 TIMESPEC TS_adc_bit_clk_p = PERIOD "adc_bit_clk_p" 437.5 MHz HIGH 50 %;
