--- a/active_hdl/atlys_sdr/soc/compile.cfg
+++ b/active_hdl/atlys_sdr/soc/compile.cfg
@@ -1,7 +1,7 @@
 [View]
-Entity=soc_top_tb
-Architecture=
-TopLevelType=3
+Entity=wb_flash_loader
+Architecture=rtl
+TopLevelType=1
 [file:.\src\soc_top.v]
 Enabled=1
 [file:.\src\soc_top_tb.v]
@@ -313,4 +313,12 @@ Enabled=1
 [file:.\..\..\..\..\AtlysAFE\coregen\rx_mux.vhd]
 Enabled=1
 [file:.\..\..\..\..\AtlysAFE\coregen\tx_mux.vhd]
+Enabled=1
+[file:.\..\..\..\..\AtlysAFE\hdl\coregen\pll_main.vhd]
+Enabled=1
+[file:.\..\..\..\..\AtlysAFE\hdl\coregen\pll_mux.vhd]
+Enabled=1
+[file:.\..\..\..\..\AtlysAFE\hdl\coregen\rx_mux.vhd]
+Enabled=1
+[file:.\..\..\..\..\AtlysAFE\hdl\coregen\tx_mux.vhd]
 Enabled=1
