added register stages for easier timing added dac channel sync signal

--- a/active_hdl/tx_path_tb/compile.cfg
+++ b/active_hdl/tx_path_tb/compile.cfg
@@ -1,7 +1,7 @@
 [View]
-Entity=
-Architecture=
-TopLevelType=
+Entity=tx_path_tb
+Architecture=sim
+TopLevelType=1
 [file:.\..\..\hdl\packet_receiver.v]
 Enabled=1
 [file:.\src\tx_path_tb.vhd]
