--- a/atlys_sdr.ucf
+++ b/atlys_sdr.ucf
@@ -154,7 +154,6 @@ NET "DAC_DATA_N[7]" LOC = V5;
 #NET "tdi_pad_i"  LOC = "U13" ; # 26
 #NET "tdo_pad_o"  LOC = "M11" ; # 23
 #NET "tms_pad_i"  LOC = "U5" ; # 33
-
 NET "rs232_rx" LOC = A16;
 NET "rs232_tx" LOC = B16;
 
@@ -306,7 +305,6 @@ NET "MDIO_pin" IOSTANDARD = LVCMOS25;
 #NET "MDC_pin" TNM_NET = "MDC_pin";
 #TIMESPEC TS_MDC_pin = PERIOD "MDC_pin" 160 ns HIGH 50%;
 #NET "MDIO_pin" OFFSET = IN 10ns VALID 10ns BEFORE "MDC_PIN";
-
 
 ## DDR2
 ############################################################################
@@ -518,7 +516,6 @@ INST "GMII_TX_ER_pin" TNM = "GMII_TX";
 NET "xilinx_ddr2_0/xilinx_ddr2/memc?_wrapper_inst/mcb_ui_top_inst/mcb_raw_wrapper_inst/gen_term_calib.mcb_soft_calibration_top_inst/mcb_soft_calibration_inst/DONE_SOFTANDHARD_CAL" TIG;
 #NET "xilinx_ddr2_0/xilinx_ddr2_if0/ddr2_mig/memc3_infrastructure_inst/sys_clk_ibufg" TNM_NET = "SYS_CLK3";
 #TIMESPEC "TS_SYS_CLK3" = PERIOD "SYS_CLK3" 3.75 ns HIGH 50 %;
-
 NET "flash_spi_csn" LOC = V3;
 NET "flash_spi_sck" LOC = R15;
 NET "flash_spi_io[3]" LOC = V14;
@@ -528,7 +525,8 @@ NET "flash_spi_io[2]" LOC = T14;
 
 #NET "tck_pad_i" TNM_NET = "tck_pad_i";
 #TIMESPEC TS_tck_pad_i = PERIOD "tck_pad_i" 5 MHz HIGH 50 %;
-
+#NET "clk_dac_ref_p" TNM_NET ="clk_dac_ref_p";
+#TIMESPEC TS_clk_dac_ref_p = PERIOD "clk_dac_ref_p" 125.0 MHz HIGH 50 %;
 NET "adc_bit_clk_p" TNM_NET = "adc_bit_clk_p";
 TIMESPEC TS_adc_bit_clk_p = PERIOD "adc_bit_clk_p" 437.5 MHz HIGH 50 %;
 
@@ -536,19 +534,20 @@ INST "flash_spi_io[0]" TNM = "FLASH_IN";
 INST "flash_spi_io[1]" TNM = "FLASH_IN";
 INST "flash_spi_io[2]" TNM = "FLASH_IN";
 INST "flash_spi_io[3]" TNM = "FLASH_IN";
-TIMEGRP "FLASH_IN" OFFSET = IN 4 ns VALID 8 ns BEFORE "clk_100_pin" RISING;
+TIMEGRP "FLASH_IN" OFFSET = IN 8 ns VALID 8 ns BEFORE "wb_clk" RISING;
 INST "flash_spi_io[0]" TNM = "FLASH_OUT";
 INST "flash_spi_io[1]" TNM = "FLASH_OUT";
 INST "flash_spi_io[2]" TNM = "FLASH_OUT";
 INST "flash_spi_io[3]" TNM = "FLASH_OUT";
 INST "flash_spi_csn" TNM = "FLASH_OUT";
 INST "flash_spi_sck" TNM = "FLASH_OUT";
-TIMEGRP "FLASH_OUT" OFFSET = OUT 6.25 ns AFTER "clk_100_pin" REFERENCE_PIN "flash_spi_sck";
+TIMEGRP "FLASH_OUT" OFFSET = OUT 8 ns AFTER "clk_100_pin" REFERENCE_PIN "flash_spi_sck";
 #TIMESPEC TS_WB_TO_IO = FROM "clkgen0_dcm1_clkdv_prebufg" TO "clkgen0_dcm1_clkfx_prebufg" TS_clkgen0_dcm1_clkdv_prebufg * 2;
 #TIMESPEC TS_IO_TO_WB = FROM "clkgen0_dcm1_clkfx_prebufg" TO "clkgen0_dcm1_clkdv_prebufg" TS_clkgen0_dcm1_clkfx_prebufg * 2;
 
 
-
 # PlanAhead Generated physical constraints 
-
 INST "adc_rx/adc_if/bufio2_inst" LOC = BUFIO2_X3Y0;
+#Created by Constraints Editor (xc6slx45-csg324-3) - 2015/09/17
+NET "DAC_CLK_REF_P" TNM_NET = DAC_CLK_REF_P;
+TIMESPEC TS_DAC_CLK_REF_P = PERIOD "DAC_CLK_REF_P" 125 MHz HIGH 50%;
