fixed spi clocking reduced mux clk to 160 MHz

--- a/active_hdl/atlys_sdr/soc/compile.cfg
+++ b/active_hdl/atlys_sdr/soc/compile.cfg
@@ -1,7 +1,7 @@
 [View]
-Entity=wb_flash_loader
-Architecture=rtl
-TopLevelType=1
+Entity=glbl soc_top_tb
+Architecture=
+TopLevelType=6
 [file:.\src\soc_top.v]
 Enabled=1
 [file:.\src\soc_top_tb.v]
@@ -321,4 +321,20 @@ Enabled=1
 [file:.\..\..\..\..\AtlysAFE\hdl\coregen\rx_mux.vhd]
 Enabled=1
 [file:.\..\..\..\..\AtlysAFE\hdl\coregen\tx_mux.vhd]
+Enabled=1
+[file:.\src\pll_mux.vhd]
+Enabled=1
+[file:.\src\rx_mux.vhd]
+Enabled=1
+[file:.\src\tx_mux.vhd]
+Enabled=1
+[file:.\src\spi_register.vhd]
+Enabled=1
+[file:.\..\..\..\..\AtlysAFE\hdl\spi_register.vhd]
+Enabled=1
+[file:C:\Xilinx\14.7\ISE_DS\ISE\verilog\src\glbl.v]
+Enabled=1
+[file:.\..\..\..\hdl\coregen\dac_sample_fifo.v]
+Enabled=1
+[file:.\..\..\..\hdl\dac_tx.v]
 Enabled=1
