fixed flashloader (not reading last word) added manual enable signals for rx/tx path

--- a/active_hdl/tx_path_tb/compile.cfg
+++ b/active_hdl/tx_path_tb/compile.cfg
@@ -1,8 +1,14 @@
 [View]
-Entity=tx_path_tb
-Architecture=sim
-TopLevelType=1
+Entity=glbl tx_path_tb sim
+Architecture=
+TopLevelType=6
 [file:.\..\..\hdl\packet_receiver.v]
 Enabled=1
 [file:.\src\tx_path_tb.vhd]
+Enabled=1
+[file:.\..\..\hdl\dac_tx.v]
+Enabled=1
+[file:.\..\..\hdl\coregen\dac_sample_fifo.v]
+Enabled=1
+[file:C:\Xilinx\14.7\ISE_DS\ISE\verilog\src\glbl.v]
 Enabled=1
