--- a/atlys_sdr.ucf
+++ b/atlys_sdr.ucf
@@ -84,6 +84,7 @@ NET "adc_bit_clk_p" LOC = R10;
 NET "adc_bit_clk_p" DIFF_TERM = "TRUE";
 # Bank = 2,  Pin name = IO_L30P_GCLK1_D13,      Sch name = EXP-IO11_P
 NET "DAC_CLK_REF_P" LOC = U10;
+NET "DAC_CLK_REF_P" DIFF_TERM = "TRUE";
 # Bank = 2,  Pin name = IO_L31P_GCLK31_D14,     Sch name = EXP-IO12_P
 NET "DAC_DATA_P[1]" LOC = R8;
 # Bank = 2,  Pin name = *IO_L40P,        		Sch name = EXP-IO13_P
@@ -131,6 +132,7 @@ NET "adc_bit_clk_n" LOC = T10;
 NET "adc_bit_clk_n" DIFF_TERM = "TRUE";
 # Bank = 2,  Pin name = IO_L30N_GCLK0_USERCCLK, Sch name = EXP-IO11_N
 NET "DAC_CLK_REF_N" LOC = V10;
+NET "DAC_CLK_REF_N" DIFF_TERM = "TRUE";
 # Bank = 2,  Pin name = IO_L31N_GCLK30_D15,     Sch name = EXP-IO12_N
 NET "DAC_DATA_N[1]" LOC = T8;
 # Bank = 2,  Pin name = *IO_L40N,        		Sch name = EXP-IO13_N
