--- a/hdl/wb_intercon/wb_intercon.conf
+++ b/hdl/wb_intercon/wb_intercon.conf
@@ -4,33 +4,47 @@ slaves = ddr2_ibus
 
 ; or1k data bus master
 [master or1k_d]
-slaves = ddr2_dbus uart0 gpio0 spi0
+slaves = ddr2_dbus uart0 gpio0 spi0 sdr_reg
 
 ; debug master
 [master dbg]
-slaves = ddr2_debug
+slaves = ddr2_debug sdr_reg
 
 [master flash0]
 slaves = ddr2_loader
+
+[master eth_rx_dma]
+slaves = ddr2_eth_rx
+
+[master eth_tx_dma]
+slaves = ddr2_eth_tx
 
 ; DDR2 SDRAM (128MB)
 ; Have several ports with buffering features,
 ; so we split each port into a seperate slave
 [slave ddr2_dbus]
 offset=0x00000000
-size=0x8000000
+size=  0x08000000
 
 [slave ddr2_ibus]
 offset=0x00000000
-size=0x8000000
+size=  0x08000000
 
 [slave ddr2_loader]
 offset=0x00000000
-size=0x8000000
+size=  0x08000000
 
 [slave ddr2_debug]
 offset=0x00000000
-size=0x8000000
+size=  0x08000000
+
+[slave ddr2_eth_rx]
+offset=0x00000000
+size=  0x08000000
+
+[slave ddr2_eth_tx]
+offset=0x00000000
+size=  0x08000000
 
 [slave uart0]
 datawidth=8
@@ -46,3 +60,8 @@ size=16
 datawidth=8
 offset=0xb0000000
 size=8
+
+[slave sdr_reg]
+datawidth=32
+offset=0x40000000
+size=256
