added tx interface

--- a/hdl/wb_intercon/wb_intercon.conf
+++ b/hdl/wb_intercon/wb_intercon.conf
@@ -16,9 +16,6 @@ slaves = ddr2_loader
 [master eth_rx_dma]
 slaves = ddr2_eth_rx
 
-[master eth_tx_dma]
-slaves = ddr2_eth_tx
-
 ; DDR2 SDRAM (128MB)
 ; Have several ports with buffering features,
 ; so we split each port into a seperate slave
@@ -65,3 +62,8 @@ size=8
 datawidth=32
 offset=0x40000000
 size=256
+
+[slave eth_tx_fifo]
+datawidth=32
+offset=0x50000000
+size=4
