added tx dma added firmware tests

--- a/active_hdl/tx_path_tb/compile.cfg
+++ b/active_hdl/tx_path_tb/compile.cfg
@@ -12,3 +12,5 @@ Enabled=1
 Enabled=1
 [file:C:\Xilinx\14.7\ISE_DS\ISE\verilog\src\glbl.v]
 Enabled=1
+[file:.\..\..\hdl\coregen\forward_buffer.v]
+Enabled=1
